Added component creation task to gulp file, separated out drawer component

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "gulp-compass": "^1.1.8",
     "gulp-livereload": "^1.2.0",
     "gulp-markdown": "^1.0.0",
-    "gulp-highlight": "0.0.3"
+    "gulp-highlight": "0.0.3",
+    "gulp-prompt": "^0.1.1",
+    "fs": "0.0.2"
   }
 }
