--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "gulp-markdown": "^1.0.0",
     "gulp-highlight": "0.0.3",
     "gulp-prompt": "^0.1.1",
-    "fs": "0.0.2"
+    "fs": "0.0.2",
+    "lodash": "^2.4.1",
+    "gulp-concat": "^2.4.2"
   }
 }
