--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-prompt": "^0.1.1",
     "fs": "0.0.2",
     "lodash": "^2.4.1",
-    "gulp-concat": "^2.4.2"
+    "gulp-concat": "^2.4.2",
+    "gulp-wrap": "^0.5.0"
   }
 }
