--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "fs": "0.0.2",
     "lodash": "^2.4.1",
     "gulp-concat": "^2.4.2",
-    "gulp-wrap": "^0.5.0"
+    "gulp-wrap": "^0.5.0",
+    "marked": "^0.3.2",
+    "gulp-replace": "^0.5.0"
   }
 }
