--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-concat": "^2.4.2",
     "gulp-wrap": "^0.5.0",
     "marked": "^0.3.2",
-    "gulp-replace": "^0.5.0"
+    "gulp-replace": "^0.5.0",
+    "gulp-sassdoc": "^1.1.1"
   }
 }
