--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-markdown": "^1.0.0",
     "gulp-notify": "^1.2.5",
     "gulp-prompt": "^0.1.1",
+    "gulp-remarkable": "^1.1.2",
     "gulp-replace": "^0.5.0",
     "gulp-ruby-sass": "^0.4.1",
     "gulp-sassdoc": "^1.1.1",
